# bachelor

./: .gitignore  CMakeLists.txt  ConnectedComponent.cpp  ConnectedComponent.h  Edge.cpp  Edge.h  Level.cpp  Level.h  MultilevelGraph.cpp  MultilevelGraph.h  README.md  USairport500.txt  Vertex.cpp  Vertex.h  imports_and_configs.h  license.txt  main.cpp  test.in
BachelorAlgorithmsBenchmark/: BachelorAlgorithmsBenchmark.cpp  CMakeLists.txt  main.cpp
BachelorAlgorithmsBenchmark/alt/: AltProgram.h  AltVertex.cpp
BachelorAlgorithmsBenchmark/bidirectional-dijkstra/: BidiProgram.h  BidiVertex.cpp  BidiVertex.h  BidirectionalDijkstra.h
BachelorAlgorithmsBenchmark/dijkstra/: DijkstraProgram.h  RegularVertex.h
BachelorAlgorithmsBenchmark/multi-level-dijkstra/: ConnectedComponent.cpp  ConnectedComponent.h  Level.cpp  MLDProgram.h  MultilevelGraph.cpp  Vertex.cpp  Vertex.h
alt/: AltVertex.h  CMakeLists.txt  Vertex.cpp  Vertex.h  alt.cpp  alt.h  main.cpp
bidirectional-dijkstra/: BidiProgram.h  BidirectionalDijkstra.cpp  BidirectionalDijkstra.h  CMakeLists.txt  Vertex.cpp  Vertex.h  main.cpp
celero/: CMakeLists.txt
celero/experiments/BachelorAlgorithmsBenchmark/: BachelorAlgorithmsBenchmark.cpp  CMakeLists.txt  imports_and_configs.h  main.cpp
celero/experiments/BachelorAlgorithmsBenchmark/alt/: AltProgram.h  alt.cpp
celero/experiments/BachelorAlgorithmsBenchmark/dijkstra/: DijkstraProgram.h
celero/experiments/BachelorAlgorithmsBenchmark/multi-level-dijkstra/: Level.cpp  Level.h  MultilevelGraph.cpp  MultilevelGraph.h
dijkstra/: Dijkstra.h
multi-level-dijkstra/: CMakeLists.txt  ConnectedComponent.cpp  ConnectedComponent.h  Level.cpp  Level.h  MLDProgram.h  MultilevelGraph.cpp  MultilevelGraph.h  Vertex.cpp  Vertex.h  main.cpp
oldtests/: airportDebug3.in  pile.in  test3.in  test4.in
tests/: USairport500.in  airportDebug.in  airportDebug2.in  california.in  cop-ph.in  cop-ph_queries.in  emails.in  emails_queries.in  foo.cpp  makeQs.cpp  oldenburg.in  san-francisco_queries.in  test2.in  test_queries.in  us-airport_queries.in
